# axum_rinha

./: Cargo.toml  Dockerfile  Dockerfile.ld  Dockerfile.ld-tcp  docker-compose.yml  nginx.conf
db/: Cargo.toml
db/src/: lib.rs
load_balance/: Cargo.toml
load_balance/src/: main.rs
load_balance_tcp/: Cargo.toml
load_balance_tcp/src/: main.rs
src/: main.rs
