[package]
name = "axum_rinha"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
serde = { version ="1.0.216", features = ["derive"] }
serde_json =   "1.0.133"
time = { version = "0.3.37", features = ["formatting", "macros", "serde", "parsing"] }
tokio = { version = "1.42.0", features = ["full"] }
