[workspace]
members = ["load_balance" , "load_balance_tcp"]

[package]
name = "axum_rinha"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["http2"]}
serde = { version ="1.0.216", features = ["derive"] }
serde_json =   "1.0.133"
time = { version = "0.3.37", features = ["formatting", "macros", "serde", "parsing"] }
tokio = { version = "1.42.0", features = ["full"] }
